--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
   <body>
     <h1>Autószerelő</h1>
-    <a href="#" target=_blank>Tárgy</a>
+    <a href="ir.html" target=_blank>Írásbeli tételek</a>
     <a href="szvk.html" target=_blank>Szakmai és vizsgakövetelmény</a>
   </body>
 </html>
