--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </style>
   <body>
     <h1>Autószerelő</h1>
-    <a href="ir.html" target=_blank>Írásbeli tételek</a>
     <a href="szvk.html" target=_blank>Szakmai és vizsgakövetelmény</a>
+    <a href="ir.html" target=_blank>Írásbeli tételek</a>
+    <a href="https://drive.google.com/file/d/1UO5TM8gHh3XbRaVGWrHU98LDp8lPgaiS/view?usp=sharing" target=_blank>Szóbeli tételek</a>
   </body>
 </html>
