--- a/szvk.html
+++ b/szvk.html
@@ -27,7 +27,7 @@
 
     <h3>Szóbeli vizsgatevékenység</h3>
     <h4>A vizsgafeladat megnevezése: Autószerelő szakmai ismeretek</h4>
-    <p>A  vizsgafeladat  ismertetése:  A  szóbeli  vizsgatevékenység  központilag  összeállított  vizsga  kérdései  az autószerelő feladatai és a járműdiagnosztika szakmai követelménymodulok témaköreit tartalmazza. - <a href="https://drive.google.com/file/d/1UO5TM8gHh3XbRaVGWrHU98LDp8lPgaiS/view?usp=sharing" target=_blank>SZÓBELI TÉTELEK</a></p>
+    <p>A  vizsgafeladat  ismertetése:  A  szóbeli  vizsgatevékenység  központilag  összeállított  vizsga  kérdései  az autószerelő feladatai és a járműdiagnosztika szakmai követelménymodulok témaköreit tartalmazza.</p>
     <p>A vizsgafeladat időtartama: 45 perc (felkészülési idő 30 perc, válaszadási idő 15 perc)</p>
     <p>A vizsgafeladat értékelési súlyaránya: 20 %</p>
   </body>
