--- a/index.html
+++ b/index.html
@@ -4,21 +4,61 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Autószerelő</title>
+    <link rel="stylesheet" href="main.css" >
   </head>
-  <style>
-    a {
-      display: block; text-align: center; font-family:Verdana, Geneva, Tahoma, sans-serif; text-decoration: none;
-      padding:10px; color: black;
-    }
-    a:hover {
-      background-color:blueviolet;
-      color: white;
-    }
-  </style>
   <body>
     <h1>Autószerelő</h1>
-    <a href="szvk.html" target=_blank>Szakmai és vizsgakövetelmény</a>
-    <a href="ir.html" target=_blank>Írásbeli tételek</a>
-    <a href="https://drive.google.com/file/d/1UO5TM8gHh3XbRaVGWrHU98LDp8lPgaiS/view?usp=sharing" target=_blank>Szóbeli tételek</a>
+
+    <div>
+      <p class="L">Elmélet</p>
+      <p class="R">Gyakorlat</p>
+    </div>
+    <div>
+      <p class="L"><a href="https://drive.google.com/file/d/1A1z9vSimjeI8nirFFGRM7LaOHArFgKoU/view?usp=sharing" target=_blank>Foglalkoztatás II.</a></p>
+      <p class="R"><a href="#" target=_blank></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="https://drive.google.com/file/d/1pyh18W7-qlLPGvxn-iyPAI4GEsKsnmLF/view?usp=sharing" target=_blank>Foglalkoztatás I.</a></p>
+      <p class="R"><a href="#" target=_blank></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="https://drive.google.com/file/d/1mLuFPIAzQ3c5c0L-XnZMYlm6rov-sydj/view?usp=sharing" target=_blank>Közlekedési ismeretek / Műszaki rajz / Mechanika / Gépelemek-géptan / Technológiai alapismeretek / Elektrotechnika-elektronika</a></p>
+      <p class="R"><a href="#" target=_blank></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="#" target=_blank></a></p>
+      <p class="R"><a href="https://drive.google.com/file/d/1iSdZ9wYKH3Ju8v4ow23SXS8SVGIPaTVP/view?usp=sharing" target=_blank>Karbantartási gyakorlatok / Mérési gyakorlatok</a></p>
+    </div>
+    <div>
+      <p class="L"><a href="https://drive.google.com/file/d/1etzZKAhZbX3LIvDHIyD6Wciu8mc8pwR7/view?usp=sharing" target=_blank>Járműkarbantartás</a></p>
+      <p class="R"><a href="#">Járműkarbantartás gyakorlata</a></p>
+    </div>
+    <div>
+      <p class="L"><a href="#">Gazdasági ismeretek</a></p>
+      <p class="R"><a href="#"></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="https://drive.google.com/file/d/1Ku5-0n8gfwzH1ynYzjigNjRqtzct3qLU/view?usp=sharing" target=_blank>Gépjárműszerkezettan</a></p>
+      <p class="R"><a href="#">Szerelési gyakorlat</a></p>
+    </div>
+    <div>
+      <p class="L"><a href="#">Gépjármű-villamosságtan</a></p>
+      <p class="R"><a href="#"></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="https://drive.google.com/file/d/1emypyICb1bZRyG9NMQqOBF_Ab86KttRT/view?usp=sharing" target=_blank>Járműdiagnosztika</a></p>
+      <p class="R"><a href="#">Járműdiagnosztika gyakorlata</a></p>
+    </div>
+
+    <a href="szvk.html">Szakmai és vizsgakövetelmény</a>
+    <div>
+      <article class="L">
+        <a href="ir.html">Írásbeli tételek</a>
+        <a href="https://drive.google.com/file/d/1UO5TM8gHh3XbRaVGWrHU98LDp8lPgaiS/view?usp=sharing" target=_blank>Szóbeli tételek</a>
+      </article>
+      <article class="R">
+        <p>Járműkarbantartás, járműszerkezet javítása és járműdiagnosztika</p>
+      </article>
+    </div>
   </body>
 </html>
