--- a/index.html
+++ b/index.html
@@ -9,45 +9,58 @@
   <body>
     <h1>Autószerelő</h1>
 
+    <p><a href="kerettaterv.html">Kerettanterv</a></p>
     <div>
-      <p class="L">Elmélet</p>
-      <p class="R">Gyakorlat</p>
-    </div>
-    <div>
-      <p class="L"><a href="https://drive.google.com/file/d/1A1z9vSimjeI8nirFFGRM7LaOHArFgKoU/view?usp=sharing" target=_blank>Foglalkoztatás II.</a></p>
-      <p class="R"><a href="#" target=_blank></a></p>
-    </div>
-    <div>
-      <p class="L"><a href="https://drive.google.com/file/d/1pyh18W7-qlLPGvxn-iyPAI4GEsKsnmLF/view?usp=sharing" target=_blank>Foglalkoztatás I.</a></p>
-      <p class="R"><a href="#" target=_blank></a></p>
-    </div>
-    <div>
-      <p class="L"><a href="https://drive.google.com/file/d/1mLuFPIAzQ3c5c0L-XnZMYlm6rov-sydj/view?usp=sharing" target=_blank>Közlekedési ismeretek / Műszaki rajz / Mechanika / Gépelemek-géptan / Technológiai alapismeretek / Elektrotechnika-elektronika</a></p>
-      <p class="R"><a href="#" target=_blank></a></p>
-    </div>
-    <div>
-      <p class="L"><a href="#" target=_blank></a></p>
-      <p class="R"><a href="https://drive.google.com/file/d/1iSdZ9wYKH3Ju8v4ow23SXS8SVGIPaTVP/view?usp=sharing" target=_blank>Karbantartási gyakorlatok / Mérési gyakorlatok</a></p>
-    </div>
-    <div>
-      <p class="L"><a href="https://drive.google.com/file/d/1etzZKAhZbX3LIvDHIyD6Wciu8mc8pwR7/view?usp=sharing" target=_blank>Járműkarbantartás</a></p>
-      <p class="R"><a href="#">Járműkarbantartás gyakorlata</a></p>
-    </div>
-    <div>
-      <p class="L"><a href="#">Gazdasági ismeretek</a></p>
+      <p class="L"><a href="fogl2.html">Foglalkoztatás II.</a></p>
       <p class="R"><a href="#"></a></p>
     </div>
     <div>
-      <p class="L"><a href="https://drive.google.com/file/d/1Ku5-0n8gfwzH1ynYzjigNjRqtzct3qLU/view?usp=sharing" target=_blank>Gépjárműszerkezettan</a></p>
-      <p class="R"><a href="#">Szerelési gyakorlat</a></p>
-    </div>
-    <div>
-      <p class="L"><a href="#">Gépjármű-villamosságtan</a></p>
+      <p class="L"><a href="fogl1.html">Foglalkoztatás I.</a></p>
       <p class="R"><a href="#"></a></p>
     </div>
     <div>
-      <p class="L"><a href="https://drive.google.com/file/d/1emypyICb1bZRyG9NMQqOBF_Ab86KttRT/view?usp=sharing" target=_blank>Járműdiagnosztika</a></p>
-      <p class="R"><a href="#">Járműdiagnosztika gyakorlata</a></p>
+      <p class="L"><a href="kozl.html">Közlekedési ismeretek</a></p>
+      <p class="R"><a href="karbgyak.html">Karbantartási gyakorlatok</a></p>
+    </div>
+    <div>
+      <p class="L"><a href="muszakirajz.html">Műszaki rajz</a></p>
+      <p class="R"><a href="mergyak.html">Mérési gyakorlatok</a></p>
+    </div>
+    <div>
+      <p class="L"><a href="mechanika.html">Mechanika</a></p>
+      <p class="R"><a href="#"></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="gepelemek-geptan.html">Gépelemek-géptan</a></p>
+      <p class="R"><a href="#"></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="technalapism.html">Technológiai alapismeretek</a></p>
+      <p class="R"><a href="#"></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="elektr.html">Elektrotechnika-elektronika</a></p>
+      <p class="R"><a href="#"></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="jarmukarb.html">Járműkarbantartás</a></p>
+      <p class="R"><a href="jarmukarbgy.html">Járműkarbantartás gyakorlata</a></p>
+    </div>
+    <div>
+      <p class="L"><a href="gazdism.html">Gazdasági ismeretek</a></p>
+      <p class="R"><a href="#"></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="gepjszt.html">Gépjármű-szerkezettan</a></p>
+      <p class="R"><a href="szerelesigy.html">Szerelési gyakorlat</a></p>
+    </div>
+    <div>
+      <p class="L"><a href="gepjvt.html">Gépjármű-villamosságtan</a></p>
+      <p class="R"><a href="#"></a></p>
+    </div>
+    <div>
+      <p class="L"><a href="jarmudiagn.html">Jármű-diagnosztika</a></p>
+      <p class="R"><a href="jarmudiagngy.html">Jármű-diagnosztika gyakorlata</a></p>
     </div>
 
     <a href="szvk.html">Szakmai és vizsgakövetelmény</a>
